--- a/src/components/UI/PrimaryButton/PrimaryButton.module.css
+++ b/src/components/UI/PrimaryButton/PrimaryButton.module.css
@@ -6,5 +6,6 @@
     background: linear-gradient(92.21deg, #2F4FFF 0.53%, #0085FF 99.3%);;
     line-height: 14px;
     font-size: 14px;
-    color: #FBFBFF
+    color: #FBFBFF;
+    border: none
 }
