--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+button {
+  cursor: pointer;
+  border: none
+}
+
+a { 
+  text-decoration: none;
+}
+
+input {
+  border: none;
+}
+
+input:focus-visible{
+  outline: none;
+}
