--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -1,11 +1,19 @@
 .container {
   display: flex;
   justify-content: space-around;
-  padding: 2.3rem;
+  align-items: center;
+  padding: 1.6rem 8.4rem;
+  background-color: red;
 }
 
 .logo {
   width: 97px;
   height: 30px;
-  background-color: red;
+  flex: 1;
+}
+
+.action {
+  flex: 1;
+  display: flex;
+  justify-content: center;
 }
