--- a/src/components/layout/footer/Footer.module.css
+++ b/src/components/layout/footer/Footer.module.css
@@ -1,15 +1,15 @@
 .container {
   display: flex;
   justify-content: space-between;
-  background-color: yellow;
   padding: 1rem 8.4rem;
+  background-color: rgba(105, 105, 105, 0.599);
+
 }
 
 .info {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: red;
   gap: 1rem;
 }
 
@@ -26,7 +26,6 @@
 
 .links {
   flex: 2;
-  background-color: green;
   display: flex;
   justify-content: space-evenly;
 }
@@ -36,6 +35,15 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1.25rem;
+  font-family: 'Visuelt Pro';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 23px;
+/* identical to box height */
+
+
+color: #000000;
 }
 
 /* .link h3 {
