Header & Footer semi final

--- a/src/components/layout/navigation/Navigation.module.css
+++ b/src/components/layout/navigation/Navigation.module.css
@@ -6,7 +6,7 @@
 
 .container a {
  color: #040403;
- font-family: 'Sofia Pro';
+ font-family: 'SF-Pro-L';
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
