--- a/src/components/layout/footer/Footer.module.css
+++ b/src/components/layout/footer/Footer.module.css
@@ -17,6 +17,13 @@
   margin-bottom: 1.5rem;
 }
 
+.info p {font-family: 'SF-Pro-L';
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.01em;
+  color: rgba(0, 0, 0, 0.8);
+  }
+
 .icons {
   display: flex;
   width: 100%;
@@ -35,17 +42,21 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1.25rem;
-  font-family: 'Visuelt Pro';
-font-style: normal;
-font-weight: 500;
-font-size: 18px;
-line-height: 23px;
-/* identical to box height */
-
-
-color: #000000;
+  
 }
 
-/* .link h3 {
-  margin: 0;
-} */
+.link h3 {
+  font-family: 'VisueltPro';
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 23px;  
+  color: #000000;}
+
+  .link a {
+    font-family: 'SF-Pro-M';
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 23px;
+    color: rgba(0, 0, 0, 0.63);
+
+  }
