--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+
+.banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 90vh;
+  gap: 44px;
+  margin-top: 80px;
+}
