--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -3,7 +3,7 @@
   justify-content: space-around;
   align-items: center;
   padding: 1.6rem 8.4rem;
-  background-color: rgba(105, 105, 105, 0.599);
+  /* background-color: rgba(105, 105, 105, 0.599); */
   height: 10vh;
 }
 
