--- a/src/components/banner/Banner.module.css
+++ b/src/components/banner/Banner.module.css
@@ -4,8 +4,8 @@
 
 .container > img {
   position: absolute;
-  top: 0;
-  left: 50%;
+  top: -20%;
+  left: 32%;
   bottom: 0;
   transform: translateX(-50%);
   z-index: -1;
