--- a/src/components/layout/footer/Footer.module.css
+++ b/src/components/layout/footer/Footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 1rem 8.4rem;
-  background-color: rgba(105, 105, 105, 0.599);
+  /* background-color: rgba(105, 105, 105, 0.599); */
 
 }
 
