--- a/src/components/sections/section-2/Section2.module.css
+++ b/src/components/sections/section-2/Section2.module.css
@@ -26,13 +26,15 @@
     font-size: 24px;
     line-height: 34px;
     text-align: center;
+    margin-bottom: 4.8rem;
 }
 
-.icons {
-    display: flex;
-    justify-content: space-around;
+.action {
+    margin: 5.9rem 0  4.3rem;
 }
 
-.item {
-    color: white;
-}
+
+
+
+
+
