--- a/src/components/sections/section-3/Section3.module.css
+++ b/src/components/sections/section-3/Section3.module.css
@@ -1,11 +1,28 @@
 .container {
-
+    min-height: 90vh;
+    display: flex;
+    justify-content: center;
+    padding-top: 200px;
 }
 
 .headline {
+    margin-bottom: 97px;
+}
+.headline > * {
+    text-align: left;
+}
+.headline > div {
+    display: flex;
+    gap: 97px;
 
+}
+.headline > div > h2 {
+    width: 321px;
+}
+.headline > div > p {
+    width: 582px;
 }
 
 .features {
-    
+
 }
