--- a/src/components/layout/footer/Footer.module.css
+++ b/src/components/layout/footer/Footer.module.css
@@ -2,14 +2,11 @@
   display: flex;
   justify-content: space-between;
   padding: 1rem 8.4rem;
-  /* background-color: rgba(105, 105, 105, 0.599); */
-
 }
 
 .info {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 1rem;
 }
 
@@ -17,17 +14,18 @@
   margin-bottom: 1.5rem;
 }
 
-.info p {font-family: 'SF-Pro-L';
+.info p {
+  font-family: "SF-Pro-M";
   font-size: 14px;
   line-height: 17px;
   letter-spacing: 0.01em;
   color: rgba(0, 0, 0, 0.8);
-  }
+}
 
 .icons {
   display: flex;
   width: 100%;
-  justify-content: space-evenly;
+  gap: 20px;
   margin-top: 2.3rem;
 }
 
@@ -42,21 +40,20 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1.25rem;
-  
 }
 
 .link h3 {
-  font-family: 'VisueltPro';
+  font-family: "VisueltPro";
   font-weight: 500;
   font-size: 18px;
-  line-height: 23px;  
-  color: #000000;}
+  line-height: 23px;
+  color: #000000;
+}
 
-  .link a {
-    font-family: 'SF-Pro-M';
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 23px;
-    color: rgba(0, 0, 0, 0.63);
-
-  }
+.link a {
+  font-family: "SF-Pro-L";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 23px;
+  color: rgba(0, 0, 0, 0.63);
+}
