--- a/src/components/sections/section-2/infoItems/InfoItems.module.css
+++ b/src/components/sections/section-2/infoItems/InfoItems.module.css
@@ -1,41 +1,41 @@
 .container {
-    width: 70%;
-    display: flex;
-    justify-content: space-around;
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
 }
 
 .infoItem {
-    width: 20%;
-    display: flex;
-    justify-content: space-between;
-    gap:0.5rem;
-    text-align: left;
-    padding: 0.5rem;
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+  text-align: left;
+  padding: 0.5rem;
 }
 
 .info {
-    padding: 0 2rem 0 0.5rem;
+  padding: 0 1rem 0 0.5rem;
 }
 
 .info > h2 {
-font-family: 'VisueltPro';
-font-style: italic;
-font-weight: 700;
-font-size: 24px;
-line-height: 31px;
-color: #FFFFFF
+  font-family: "VisueltPro";
+  font-style: italic;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 31px;
+  color: #ffffff;
 }
 
 .info > p {
-    font-family: 'SF-Pro-M';
-font-style: normal;
-font-weight: 400;
-font-size: 13px;
-line-height: 18px;
-color: rgba(255, 255, 255, 0.63);
-margin-top: 0.5rem;
+  font-family: "SF-Pro-L";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: rgba(255, 255, 255, 0.63);
+  margin-top: 0.5rem;
 }
 
 .icon {
-width: 50px;
+  width: 50px;
 }
