--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -1,9 +1,8 @@
 .container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 1.6rem 8.4rem;
-  /* background-color: rgba(105, 105, 105, 0.599); */
   height: 10vh;
 }
 
@@ -14,7 +13,7 @@
 }
 
 .action {
-  flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  flex: 1;
 }
