--- a/src/components/ui/H4/H4.module.css
+++ b/src/components/ui/H4/H4.module.css
@@ -7,5 +7,6 @@
     -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
-    /* font-family: Visuelt Pro */
+    font-family: "VisueltPro";
+    text-transform: uppercase;
 }
