--- a/src/components/ui/body-reg/BodyReg.module.css
+++ b/src/components/ui/body-reg/BodyReg.module.css
@@ -1,5 +1,5 @@
 .bodyReg {
-  /* font-family: SF Pro Text; */
+  font-family: "SF-Pro-L";
   font-size: 16px;
   font-weight: 400;
   line-height: 27px;
