--- a/src/components/ui/body-small/BodySmall.module.css
+++ b/src/components/ui/body-small/BodySmall.module.css
@@ -1,5 +1,5 @@
 .bodySmall {
-    /* font-family: SF Pro Text; */
+    font-family: "SF-Pro-M";
     font-size: 13px;
     font-weight: 400;
     line-height: 23px;
