--- a/src/components/ui/H1/H1.module.css
+++ b/src/components/ui/H1/H1.module.css
@@ -2,6 +2,6 @@
     font-weight: 900;
     font-size: 55px;
     line-height: 66px;
-    color: #000000
-    /* font: Visuelt Pro */
+    color: #000000;
+    font-family: "VisueltPro";
 }
