--- a/src/components/sections/about-1/About1.module.css
+++ b/src/components/sections/about-1/About1.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* height: 90vh; */
+  text-align: center;
   gap: 44px;
   margin-top: 80px;
 }
