--- a/src/components/sections/section-2/Section2.module.css
+++ b/src/components/sections/section-2/Section2.module.css
@@ -1,40 +1,34 @@
 .container {
-    background-image: url('../../../../public/images/section2.png');
-    background-size: cover;
-    background-color: #06003F;
-    min-height: 100vh;
-    height: 100%;
-
+  background-image: url("../../../../public/images/section2.png");
+  background-size: cover;
+  background-color: #06003f;
+  min-height: 100vh;
+  height: 100%;
+  text-align: center;
 }
 
 .top {
-    height: 50vh
+  height: 50vh;
 }
 
 .bottom {
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .title {
-    font-family: 'VisueltPro';
-    color: white;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 34px;
-    text-align: center;
-    margin-bottom: 4.8rem;
+  font-family: "VisueltPro";
+  color: white;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 34px;
+  text-align: center;
+  margin-bottom: 4.8rem;
 }
 
 .action {
-    margin: 5.9rem 0  4.3rem;
+  margin: 5.9rem 0 4.3rem;
 }
-
-
-
-
-
-
