--- a/src/components/sections/section-3/Section3.module.css
+++ b/src/components/sections/section-3/Section3.module.css
@@ -1,31 +1,31 @@
 .container {
-    min-height: 90vh;
-    display: flex;
-    justify-content: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
+  min-height: 90vh;
+  display: flex;
+  justify-content: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  text-align: center;
 }
 
 .headline {
-    margin-bottom: 97px;
+  margin-bottom: 97px;
 }
 .headline > * {
-    text-align: left;
+  text-align: left;
 }
 
 .headline > div {
-    display: flex;
-    gap: 97px;
-
+  display: flex;
+  gap: 97px;
 }
 .headline > div > h2 {
-    width: 321px;
+  width: 321px;
 }
 .headline > div > p {
-    width: 582px;
+  width: 582px;
 }
 
 .features {
-    display: flex;
-    gap: 77px;
+  display: flex;
+  gap: 77px;
 }
