--- a/src/components/testimonial/item/item.module.css
+++ b/src/components/testimonial/item/item.module.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     width: 377px;
-    gap: 21px
+    gap: 21px;
+    cursor: pointer;
 }
 
 .primary {
