trying to move that slider but it does not move

--- a/src/components/testimonial/TestimonialManager.module.css
+++ b/src/components/testimonial/TestimonialManager.module.css
@@ -52,3 +52,13 @@
   background: #040403;
   cursor: pointer;
 }
+
+.left {
+  transform: translateX(0);
+}
+.center {
+  transform: translateX(-50%);
+}
+.right {
+  transform: translateX(-100%);
+}
