--- a/src/components/sections/section-1/Section1.module.css
+++ b/src/components/sections/section-1/Section1.module.css
@@ -7,3 +7,37 @@
   margin-top: 80px;
   text-align: center;
 }
+
+.floatImage {
+  margin-top: 5rem;
+}
+
+.floatImage img {
+  width: 100%;
+}
+
+@media (max-width: 1700px) {
+  .floatImage img {
+    width: 90%;
+  }
+  .floatImage {
+    margin-top: 3rem;
+  }
+}
+
+@media (max-width: 1500px) {
+  .floatImage img {
+    width: 75%;
+  }
+  .floatImage {
+    margin-top: 0;
+  }
+}
+@media (max-width: 1300px) {
+  .floatImage img {
+    width: 60%;
+  }
+  .floatImage {
+    margin-top: 0;
+  }
+}
