button scale transition

--- a/src/components/ui/primary-button/PrimaryButton.module.css
+++ b/src/components/ui/primary-button/PrimaryButton.module.css
@@ -9,10 +9,11 @@
   font-family: "SF-Pro-M";
   border: none;
   font-weight: 400;
+  transform-origin: center;
+  transition: transform 0.1s ease-in;  
 }
 
 .button:hover {
-  width: 152px;
-  height: 54px;
+  transform: scale(1.027, 1.08);
   font-weight: 500;
 }
