--- a/src/components/promotion/Promotion.module.css
+++ b/src/components/promotion/Promotion.module.css
@@ -18,6 +18,7 @@
 
 .content {
     margin-top: 46px;
+    text-align: center;
 }
 
 .content h2 {
@@ -37,5 +38,18 @@
     margin-bottom: 35px;
     color: rgba(255, 255, 255, 0.79);
     line-height: 18px;
+}
 
+.content h3 {
+    color: rgba(255, 255, 255, 0.79);
+}
+
+.textWithEmoji {
+    position: relative;
+    display: inline-block;
+
+}
+
+.textWithEmoji img {
+    left: 100%;
 }
