--- a/src/components/sections/section-2/Section2.module.css
+++ b/src/components/sections/section-2/Section2.module.css
@@ -32,3 +32,14 @@
 .action {
   margin: 5.9rem 0 4.3rem;
 }
+
+@media (max-width: 1500px) {
+  .action {
+    margin: 4rem 0 7rem;
+  }
+}
+@media (max-width: 1300px) {
+  .action {
+    margin: 4rem 0 8rem;
+  }
+}
