--- a/src/components/testimonial/item/item.module.css
+++ b/src/components/testimonial/item/item.module.css
@@ -23,7 +23,7 @@
 }
 
 .primary h2 {
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     color: #040403;
     line-height: 35px;
     font-size: 24px;
